// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<styled.nav>
  <styled.div>
    <Styled(Link)
      to="/sale"
    >
      Promocje
    </Styled(Link)>
    <Styled(Link)
      key="/categories/care"
      to="/categories/care"
    >
      Pielęgnacja
    </Styled(Link)>
    <Styled(Link)
      key="/categories/perfume"
      to="/categories/perfume"
    >
      Perfumy
    </Styled(Link)>
    <Styled(Link)
      key="/categories/makeup"
      to="/categories/makeup"
    >
      Makijaż
    </Styled(Link)>
  </styled.div>
  <styled.form
    onSubmit={[Function]}
  >
    <styled.input
      onChange={[Function]}
      placeholder="znajdź produkt"
      type="text"
      value=""
    />
    <styled.button
      type="submit"
    >
      Szukaj
    </styled.button>
  </styled.form>
</styled.nav>
`;

exports[`should submit form correctly 1`] = `
<Navigation
  categories={
    Array [
      Object {
        "description": "Należy przestrzegać codziennej pielęgnacji twarzy",
        "id": "1",
        "name": "Pielęgnacja",
        "type": "care",
        "url": "/categories/care",
      },
      Object {
        "description": "Prfumy w których się zakochasz",
        "id": "2",
        "name": "Perfumy",
        "type": "perfume",
        "url": "/categories/perfume",
      },
      Object {
        "description": "Te kosmetyki odmienią twoje spojrzenie",
        "id": "3",
        "name": "Makijaż",
        "type": "makeup",
        "url": "/categories/makeup",
      },
    ]
  }
  history={
    Object {
      "push": [MockFunction],
    }
  }
>
  <styled.nav>
    <nav
      className="sc-bdvvaa gmoOLK"
    >
      <styled.div>
        <div
          className="sc-gsDJrp hSAGZl"
        >
          <Styled(Link)
            to="/sale"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/sale"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/care"
            to="/categories/care"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/care"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/perfume"
            to="/categories/perfume"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/perfume"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/makeup"
            to="/categories/makeup"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/makeup"
            >
              Link
            </Link>
          </Styled(Link)>
        </div>
      </styled.div>
      <styled.form
        onSubmit={[Function]}
      >
        <form
          className="sc-hKwCoD hfobKK"
          onSubmit={[Function]}
        >
          <styled.input
            onChange={[Function]}
            placeholder="znajdź produkt"
            type="text"
            value="Hello"
          >
            <input
              className="sc-eCImvq"
              onChange={[Function]}
              placeholder="znajdź produkt"
              type="text"
              value="Hello"
            />
          </styled.input>
          <styled.button
            type="submit"
          >
            <button
              className="sc-jRQAMF"
              type="submit"
            >
              Szukaj
            </button>
          </styled.button>
        </form>
      </styled.form>
    </nav>
  </styled.nav>
</Navigation>
`;

exports[`should submit form correctly 2`] = `
<Navigation
  categories={
    Array [
      Object {
        "description": "Należy przestrzegać codziennej pielęgnacji twarzy",
        "id": "1",
        "name": "Pielęgnacja",
        "type": "care",
        "url": "/categories/care",
      },
      Object {
        "description": "Prfumy w których się zakochasz",
        "id": "2",
        "name": "Perfumy",
        "type": "perfume",
        "url": "/categories/perfume",
      },
      Object {
        "description": "Te kosmetyki odmienią twoje spojrzenie",
        "id": "3",
        "name": "Makijaż",
        "type": "makeup",
        "url": "/categories/makeup",
      },
    ]
  }
  history={
    Object {
      "push": [MockFunction] {
        "calls": Array [
          Array [
            "/search?q=Hello",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
>
  <styled.nav>
    <nav
      className="sc-bdvvaa gmoOLK"
    >
      <styled.div>
        <div
          className="sc-gsDJrp hSAGZl"
        >
          <Styled(Link)
            to="/sale"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/sale"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/care"
            to="/categories/care"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/care"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/perfume"
            to="/categories/perfume"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/perfume"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/makeup"
            to="/categories/makeup"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/makeup"
            >
              Link
            </Link>
          </Styled(Link)>
        </div>
      </styled.div>
      <styled.form
        onSubmit={[Function]}
      >
        <form
          className="sc-hKwCoD hfobKK"
          onSubmit={[Function]}
        >
          <styled.input
            onChange={[Function]}
            placeholder="znajdź produkt"
            type="text"
            value=""
          >
            <input
              className="sc-eCImvq"
              onChange={[Function]}
              placeholder="znajdź produkt"
              type="text"
              value=""
            />
          </styled.input>
          <styled.button
            type="submit"
          >
            <button
              className="sc-jRQAMF"
              type="submit"
            >
              Szukaj
            </button>
          </styled.button>
        </form>
      </styled.form>
    </nav>
  </styled.nav>
</Navigation>
`;
